增加配置文件管理